0.2.3
Improved open include now tries exact match -> best match.
Open include file now only needs the cursor on the line with a #include no need to select the whole line, # **MUST** be the first character on the line.
Improved search for definition now try's: exact match in open files->exact match in all files in current folder->best match in all files in current folder.
Fixed bug in restore session when trying to restor file with a space in the name.
Fixed crash when trying to restore session with bookmarks with missing file.
Improved string scanning fo valid chars.
Standardized save/load routines for configs.
If two or more plugins use a top/bottom pane pane wont be closed until all plugins close it.
Added top/bottom draggable panes for plugins.
Added loadVarsFromFile and saveVarsToFile to kkedits export so plugins can use the routines to save/load data.
Fixed key propagation to tools!
Added reserved data to page structure.
Fixed bug when plugin must not be unloaded.
Fixed segfault when shutting window with close button rather than using quit.
Fixed key presses not being propagated to plugins.
Added user datalist to page structure for use by plugins.
Fixed plugins in subfolders not being properly sorted on load.

0.2.2
Made 'Get Plugins' open browser as async.
Removed use of xdg-open ( broken in LFS ) can now set the default browser in prefs if internal docviewer is disabled ( defaults to firefox ).
Added context popup menu to data passed to plugins to add to the context pop up.
Added call to "addToContext" functions in plugins.
Added tab popup menu to data passed to plugins to add to the tab pop up.
Added call to "addToTab" functions in plugins.
Removed example-plugin from package as it's available from the website now.
Added search in page of builtin doc viewer (Up/Down).
Fixed bug when trying to jump to non-existant function declaration.
Fixed minor sensitive bug when closing tab.