@@ -181,7 +181,7 @@ void destroyBMData(gpointer data)
 	debugFree(((bookMarksNew*)data)->markName,"destroyBMData markName");
 }
 
-void removeAllBookmarks(GtkWidget* widget,GtkTextIter* titer)
+__attribute__((visibility("default"))) void removeAllBookmarks(GtkWidget* widget,GtkTextIter* titer)
 {
 	pageStruct*	page=NULL;
 	int			numpages;
@@ -202,7 +202,7 @@ void removeAllBookmarks(GtkWidget* widget,GtkTextIter* titer)
 	gtk_widget_show_all(menuBookMark);
 }
 
-void toggleBookmark(GtkWidget* widget,GtkTextIter* titer)
+__attribute__((visibility("default"))) void toggleBookmark(GtkWidget* widget,GtkTextIter* titer)
 {
 	pageStruct*		page=getPageStructPtr(-1);
 	GtkWidget*		menuitem;
@@ -344,7 +344,7 @@ int yesNo(char* question,char* file)
 	return(result);
 }
 
-void doOpenFile(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void doOpenFile(GtkWidget* widget,gpointer data)
 {
 	GtkWidget*	dialog;
 	char*		filename;
@@ -501,7 +501,7 @@ void setSensitive(void)
 	g_list_foreach(globalPlugins->plugins,plugRunFunction,(gpointer)"setSensitive");
 }
 
-void closeTab(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void closeTab(GtkWidget* widget,gpointer data)
 {
 	long		thispage;
 	int			result;
@@ -590,7 +590,7 @@ void closeTab(GtkWidget* widget,gpointer data)
 	setSensitive();
 }
 
-void closeAllTabs(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void closeAllTabs(GtkWidget* widget,gpointer data)
 {
 	int	numtabs=gtk_notebook_get_n_pages(notebook);
 
@@ -721,20 +721,20 @@ void switchPage(GtkNotebook *notebook,gpointer arg1,guint thispage,gpointer user
 
 }
 
-void copyToClip(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void copyToClip(GtkWidget* widget,gpointer data)
 {
 	pageStruct*	page=getPageStructPtr(-1);
 	gtk_text_buffer_copy_clipboard((GtkTextBuffer*)page->buffer,gtk_clipboard_get(GDK_SELECTION_CLIPBOARD));
 }
 
-void cutToClip(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void cutToClip(GtkWidget* widget,gpointer data)
 {
 	pageStruct*	page=getPageStructPtr(-1);
 	gtk_text_buffer_cut_clipboard((GtkTextBuffer*)page->buffer,gtk_clipboard_get(GDK_SELECTION_CLIPBOARD),true);
 	setSensitive();
 }
 
-void pasteFromClip(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void pasteFromClip(GtkWidget* widget,gpointer data)
 {
 	pageStruct*		page=getPageStructPtr(-1);
 	char*			clipdata=NULL;
@@ -752,7 +752,7 @@ void pasteFromClip(GtkWidget* widget,gpointer data)
 	setSensitive();
 }
 
-void undo(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void undo(GtkWidget* widget,gpointer data)
 {
 	pageStruct*	page=getPageStructPtr(-1);
 
@@ -764,7 +764,7 @@ void undo(GtkWidget* widget,gpointer data)
 	}
 }
 
-void unRedoAll(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void unRedoAll(GtkWidget* widget,gpointer data)
 {
 	pageStruct*	page=getPageStructPtr(-1);
 
@@ -786,7 +786,7 @@ void unRedoAll(GtkWidget* widget,gpointer data)
 }
 
 
-void redo(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void redo(GtkWidget* widget,gpointer data)
 {
 	pageStruct*	page=getPageStructPtr(-1);
 
@@ -798,7 +798,7 @@ void redo(GtkWidget* widget,gpointer data)
 	}
 }
 
-void dropUri(GtkWidget *widget,GdkDragContext *context,gint x,gint y,GtkSelectionData *selection_data,guint info,guint32 time,gpointer user_data)
+__attribute__((visibility("default"))) void dropUri(GtkWidget *widget,GdkDragContext *context,gint x,gint y,GtkSelectionData *selection_data,guint info,guint32 time,gpointer user_data)
 {
 	gchar**	array=gtk_selection_data_get_uris(selection_data);
 	int		cnt=g_strv_length(array);
@@ -941,7 +941,7 @@ void externalTool(GtkWidget* widget,gpointer data)
 	delete slice;
 }
 
-void openHelp(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void openHelp(GtkWidget* widget,gpointer data)
 {
 	asprintf(&thePage,"file://%s/help/help.html",DATADIR);
 #ifdef _BUILDDOCVIEWER_
@@ -1392,7 +1392,7 @@ void writeConfig(void)
 	debugFree(filename,"writeConfig filename");
 }
 
-bool doSaveAll(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) bool doSaveAll(GtkWidget* widget,gpointer data)
 {
 	int			numpages=gtk_notebook_get_n_pages(notebook);
 	int			result;
@@ -1430,7 +1430,7 @@ bool doSaveAll(GtkWidget* widget,gpointer data)
 	return(true);
 }
 
-void doShutdown(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void doShutdown(GtkWidget* widget,gpointer data)
 {
 	char*	command;
 
@@ -1676,7 +1676,7 @@ void setToolOptions(GtkWidget* widget,gpointer data)
 	debugFree(dirname,"setToolOptions dirname");
 }
 
-void doAbout(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void doAbout(GtkWidget* widget,gpointer data)
 {
 	const char*	authors[]= {"K.D.Hedger <"MYEMAIL">\n",MYWEBSITE,"\nMore by the same author\n","Xfce-Theme-Manager\nhttp://xfce-look.org/content/show.php?content=149647\n","Xfce4-Composite-Editor\nhttp://gtk-apps.org/content/show.php/Xfce4-Composite-Editor?content=149523\n","Manpage Editor\nhttp://gtk-apps.org/content/show.php?content=160219\n","GtkSu\nhttp://gtk-apps.org/content/show.php?content=158974\n","ASpell GUI\nhttp://gtk-apps.org/content/show.php/?content=161353\n","Clipboard Viewer\nhttp://gtk-apps.org/content/show.php/?content=121667",NULL};
 	const char	copyright[] ="Copyright \xc2\xa9 2013 K.D.Hedger";
@@ -1737,7 +1737,7 @@ void beginPrint(GtkPrintOperation *operation,GtkPrintContext *context,gpointer u
 	gtk_print_operation_set_n_pages(operation,n_pages);
 }
 
-void printFile(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void printFile(GtkWidget* widget,gpointer data)
 {
 	doCombineBuffers();
 	GtkSourcePrintCompositor*	printview=gtk_source_print_compositor_new_from_view(printView);
@@ -1781,7 +1781,7 @@ void recentFileMenu(GtkRecentChooser* chooser,gpointer* data)
 		}
 }
 
-void newEditor(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void newEditor(GtkWidget* widget,gpointer data)
 {
 	char*	command=NULL;
 
@@ -1838,7 +1838,7 @@ __attribute__((visibility("default"))) void hideToolOutput(bool immediate)
 		}
 }
 
-void toggleToolOutput(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void toggleToolOutput(GtkWidget* widget,gpointer data)
 {
 	showToolOutWin=!showToolOutWin;
 	if(showToolOutWin)
@@ -1853,7 +1853,7 @@ void toggleToolOutput(GtkWidget* widget,gpointer data)
 		}
 }
 
-void toggleBookMarkBar(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void toggleBookMarkBar(GtkWidget* widget,gpointer data)
 {
 	showBMBar=!showBMBar;
 	if(showBMBar)
@@ -1863,7 +1863,7 @@ void toggleBookMarkBar(GtkWidget* widget,gpointer data)
 	resetAllFilePrefs();
 }
 
-void toggleToolBar(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void toggleToolBar(GtkWidget* widget,gpointer data)
 {
 	showToolBar=!showToolBar;
 	if(showToolBar)
@@ -1874,7 +1874,7 @@ void toggleToolBar(GtkWidget* widget,gpointer data)
 }
 
 //toggleStatusBar
-void toggleStatusBar(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void toggleStatusBar(GtkWidget* widget,gpointer data)
 {
 	showStatus=!showStatus;
 	if(showStatus)
@@ -1886,7 +1886,7 @@ void toggleStatusBar(GtkWidget* widget,gpointer data)
 
 #ifdef _BUILDDOCVIEWER_
 
-void toggleDocviewer(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void toggleDocviewer(GtkWidget* widget,gpointer data)
 {
 	showHideDocviewer=!showHideDocviewer;
 	if(showHideDocviewer)
@@ -2067,7 +2067,7 @@ void loadKeybindings(void)
 		}
 }
 
-gboolean keyShortCut(GtkWidget* window,GdkEventKey* event,gpointer data)
+__attribute__((visibility("default"))) gboolean keyShortCut(GtkWidget* window,GdkEventKey* event,gpointer data)
 {
 	int		loop;
 	bool	gotKey=false;
@@ -2096,7 +2096,7 @@ gboolean keyShortCut(GtkWidget* window,GdkEventKey* event,gpointer data)
 	return(false);
 }
 
-void getPlugins(GtkWidget* widget,gpointer data)
+__attribute__((visibility("default"))) void getPlugins(GtkWidget* widget,gpointer data)
 {
 	char*	command;
 
